src/css/main.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

@tailwind base;
@tailwind components;
@tailwind utilities;

/* colors
forge pink #e530e9
cloud blue #77ceff
kube green #84ffbc */

@font-face {
  font-family: "Manrope";
  src: url("../fonts/Manrope.woff2") format("woff2");
}

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #2e8555;
  --ifm-color-primary-dark: #29784c;
  --ifm-color-primary-darker: #277148;
  --ifm-color-primary-darkest: #205d3b;
  --ifm-color-primary-light: #33925d;
  --ifm-color-primary-lighter: #359962;
  --ifm-color-primary-lightest: #3cad6e;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme="dark"] {
  --ifm-color-primary: #25c2a0;
  --ifm-color-primary-dark: #21af90;
  --ifm-color-primary-darker: #1fa588;
  --ifm-color-primary-darkest: #1a8870;
  --ifm-color-primary-light: #29d5b0;
  --ifm-color-primary-lighter: #32d8b4;
  --ifm-color-primary-lightest: #4fddbf;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

html[data-theme="dark"] {
  --ifm-color-primary: #49fc9a;
  --ifm-background-color: #0d0c1c;
  --ifm-menu-color-active: #49fc9a;
  /* --ifm-breadcrumb-color-active: #84ffbc; */
  --ifm-footer-background-color: #060611;
  --ifm-navbar-background-color: #060611;
  --ifm-color: #f9fafb;
  --ifm-preview-text: #f9fafb;
  --ifm-link-color: #a1a1a1;
  --ifm-link-hover-color: var(--ifm-color-primary);
  --ifm-card-background-color: #0606117c;
  --docusaurus-highlighted-code-line-bg: rgb(57, 104, 77);
}

body {
  font-family: "Manrope", var(--ifm-font-family-base);
}

/* .footer--dark {
  --ifm-footer-background-color: #242526;
  --ifm-footer-color: var(--ifm-footer-link-color);
  --ifm-footer-link-color: var(--ifm-color-secondary);
  --ifm-footer-title-color: var(--ifm-color-white);
} */

.footer--dark {
  --ifm-footer-background-color: #060611;
  --ifm-footer-color: var(--ifm-footer-link-color);
  --ifm-footer-link-color: var(--ifm-color-secondary);
  --ifm-footer-title-color: var(--ifm-color-white);
}

div.container {
  @apply mx-0 w-full xl:ml-8 xl:w-11/12 2xl:ml-32 2xl:max-w-6xl;
}

article {
  @apply ml-0 max-w-full 2xl:max-w-4xl;
}

.cardDescription_node_modules-\@docusaurus-theme-classic-lib-theme-DocCard-styles-module {
  @apply line-clamp-3 whitespace-normal;
}

.theme-doc-toc-desktop {
  @apply ml-0 xl:ml-8 xl:w-48 2xl:ml-32 2xl:w-64;
}

.footer {
  @apply flex w-screen justify-center;
}

